crates/cuda-macros/tests/compile_fail/kernel_launch_context_unknown_argument.rs
// SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

use cuda_device::kernel;

#[kernel(context = launch_context)]
pub fn unknown() {}

fn main() {}
